Edited coordinates of aoi. Added section to write raster generated via rgee to the data folder.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 .Rproj.user/B0EF3A6E/sources/prop/INDEX
 .Rproj.user/B0EF3A6E/sources/prop/C29D8DA5
 .Rproj.user/shared/notebooks/E6A31068-access_global_local/1/s/csetup_chunk/000002.csv
+.Rproj.user
